# pngtotxt

./: .project  CMakeLists.txt  README.W32.md  README.md  qrcode.txt
cmake/: cmake_uninstall.cmake.in
include/: CMakeLists.txt  config.h.in  imgbuf.h  pngtotxt.h
src/: CMakeLists.txt  imgbuf.c  main.c  pngtotxt.c
